# ultrasound-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: pylint.yml  ruff.yml
demo/: cloud-segmentation.ipynb  color_retrieval.ipynb  features.ipynb
src/features/: __init__.py  features.py
src/processing/: __init__.py  processing.py
src/videotools/: __init__.py  videotools.py
