[project]
name = 'src'
version = '0.1.1'
authors = [
    {name = 'Artsiom Halian'},
    {name = 'Anhelina Varvashevich'},
    {name = 'Yaroslav Aleksandrovich'},
    {name = 'Artsiom Saladukha'}
]
description = 'uzi task'
requires-python = '>=3.12.0'

[tool.setuptools.packages.find]
where=['src']

[tool.setuptools]
include-package-data = true
